fix old nickname